crates/rules/tests/snapshots/rules_test__emit_helm_images.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: envoy/envoy
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: sidecar/proxy/image
- value: myorg/frontend
  span_start: 0
  span_end: 0
  kind: DepName
  is_path: false
  parent_key: ~
  node_path: image
- value: v1.2.3
  span_start: 0
  span_end: 0
  kind: DepVersion
  is_path: false
  parent_key: myorg/frontend
  node_path: image
- value: v1.28
  span_start: 0
  span_end: 0
  kind: DepVersion
  is_path: false
  parent_key: envoy/envoy
  node_path: sidecar/proxy/image
