crates/rules/tests/snapshots/rules_test__minimal_rule.snap
---
source: crates/rules/tests/rules_test.rs
expression: ruleset
---
rules:
  - name: catch-all
    select:
      - step: file
        pattern: "**/*.json"
    emit:
      - capture: val
        kind: json_value
