crates/rules/tests/snapshots/rules_test__rule_docker_compose_services.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: api
  span_start: 0
  span_end: 0
  kind: service_name
  rule_name: docker-compose-services
  is_path: false
  parent_key: ~
  node_path: services/api
- value: postgres
  span_start: 0
  span_end: 0
  kind: service_name
  rule_name: docker-compose-services
  is_path: false
  parent_key: ~
  node_path: services/postgres
- value: redis
  span_start: 0
  span_end: 0
  kind: service_name
  rule_name: docker-compose-services
  is_path: false
  parent_key: ~
  node_path: services/redis
- value: worker
  span_start: 0
  span_end: 0
  kind: service_name
  rule_name: docker-compose-services
  is_path: false
  parent_key: ~
  node_path: services/worker
