crates/rules/tests/snapshots/rules_test__rule_k8s_configmap_envs.snap
---
source: crates/rules/tests/rules_test.rs
expression: refs
---
- value: DATABASE_URL
  span_start: 0
  span_end: 0
  kind: env_var_name
  rule_name: k8s-configmap-envs
  is_path: false
  parent_key: ~
  node_path: data/DATABASE_URL
- value: LOG_LEVEL
  span_start: 0
  span_end: 0
  kind: env_var_name
  rule_name: k8s-configmap-envs
  is_path: false
  parent_key: ~
  node_path: data/LOG_LEVEL
- value: MAX_CONNECTIONS
  span_start: 0
  span_end: 0
  kind: env_var_name
  rule_name: k8s-configmap-envs
  is_path: false
  parent_key: ~
  node_path: data/MAX_CONNECTIONS
- value: REDIS_HOST
  span_start: 0
  span_end: 0
  kind: env_var_name
  rule_name: k8s-configmap-envs
  is_path: false
  parent_key: ~
  node_path: data/REDIS_HOST
